fix: Show scroll overflow when tasks numbers overpass limit

--- a/src/features/Todo/TodoList/TodoList.scss
+++ b/src/features/Todo/TodoList/TodoList.scss
@@ -1,11 +1,17 @@
 .cardsList {
+  position: relative;
   width: 100%;
+  height: 56vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  //   overflow-y: auto;
-  //   overflow-x: hidden;
+  padding-left: 4px;
+
+  &.extended {
+    overflow-y: scroll;
+    padding-right: 8px;
+  }
 }
 
 .cardsList::-webkit-scrollbar {
